--- a/src/renderer/src/assets/main.css
+++ b/src/renderer/src/assets/main.css
@@ -61,11 +61,9 @@
 @import './base.css';
 
 body {
-  display: flex;
-  align-items: center;
-  justify-content: center;
+  margin: 0;
+  padding: 0;
   overflow: hidden;
-  user-select: none;
 }
 
 code {
@@ -85,11 +83,8 @@ code {
 }
 
 #root {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-direction: column;
-  margin-bottom: 80px;
+  width: 100%;
+  height: 100vh;
 }
 
 .logo {
